Fixes-for-account-my-recent-reviews-alignment

--- a/app/design/frontend/Magento/luma/Magento_Review/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_Review/web/css/source/_module.less
@@ -360,6 +360,7 @@
             .label {
                 font-weight: @font-weight__semibold;
                 margin-right: @indent__s;
+                vertical-align: middle;
             }
         }
     }
